Organizando a estrutura das pastas

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+    <title>Todo Poderoso Timão</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-container">
+            <ul class="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#historia">História</a></li>
+                <li><a href="#jogadores">Jogadores</a></li>
+                <li><a href="#fiel">Fiel Torcida</a></li>
+                <li><a href="#jogos">Jogos</a></li>
+            </ul>
+
+            <button class="btn-user">Usuário</button>
+        </nav>
+    </header>
+
+    <section class="titulo">
+        <div>
+            <h1>NOSSO ELENCO</h1>
+        </div>
+    </section>
+
+    <section class="card-jogador">
+        <div>
+
+        </div>
+    </section>
 </body>
 </html>
