Criando os cards do elenco

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo Poderoso Timão</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -21,15 +21,298 @@
         </nav>
     </header>
 
-    <section class="titulo">
+    <section id="jogadores" class="page-title">
         <div>
             <h1>NOSSO ELENCO</h1>
         </div>
     </section>
 
     <section class="card-jogador">
-        <div>
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/hugo-souza-corpo.png" alt="Hugo Souza">
+                </div>
 
+                <div class="card-info">
+                    <h3>Hugo Souza</h3>
+                    <p>Goleiro #1</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/bidu-.png" alt="bidu">
+                </div>
+
+                <div class="card-info">
+                    <h3>Matheus Bidu</h3>
+                    <p>Lateral Esquerdo #21</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/Gustavo-henrique.png" alt="Gustavo henrique">
+                </div>
+
+                <div class="card-info">
+                    <h3>Gustavo Henrique</h3>
+                    <p>Zagueiro #13</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/andre-ramalho.png" alt="Ramalho">
+                </div>
+
+                <div class="card-info">
+                    <h3>André Ramalho</h3>
+                    <p>Zagueiro #5</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/tchoca.png" alt="João Pedro">
+                </div>
+
+                <div class="card-info">
+                    <h3>João Pedro</h3>
+                    <p>Zagueiro #47</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/caca.png" alt="Caca">
+                </div>
+
+                <div class="card-info">
+                    <h3>Cacá</h3>
+                    <p>Zagueiro #25</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/felix.png" alt="Felix">
+                </div>
+
+                <div class="card-info">
+                    <h3>Felix</h3>
+                    <p>Zagueiro #3</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/Angilleri.png" alt="Angilleri">
+                </div>
+
+                <div class="card-info">
+                    <h3>Fabrizio Angileri</h3>
+                    <p>Lateral Esquerdo #26</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/mateuzinho.png" alt="Mateuzinho">
+                </div>
+
+                <div class="card-info">
+                    <h3>Mateuzinho</h3>
+                    <p>Lateral Direito #2</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/RAniele.png" alt="Raniele">
+                </div>
+
+                <div class="card-info">
+                    <h3>Raniele</h3>
+                    <p>Volante #14</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/Maycon.png" alt="Maycon">
+                </div>
+
+                <div class="card-info">
+                    <h3>Maycon</h3>
+                    <p>Volante #5</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/MArtinez.png" alt="Martinez">
+                </div>
+                <div class="card-info">
+                    <h3>José Martinez</h3>
+                    <p>Volante #70
+                    </p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/Carrilo.png" alt="Carrillo">
+                </div>
+
+                <div class="card-info">
+                    <h3>André Carrillo</h3>
+                    <p>Meia #19</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/bidon.png" alt="Bidon">
+                </div>
+                
+                <div class="card-info">
+                    <h3>Breno Bidon</h3>
+                    <p>Meia #27</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/garro.png" alt="Garro">
+                </div>
+
+                <div class="card-info">
+                    <h3>Rodrigo Garro</h3>
+                    <p>Meia #8</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/talles.png" alt="Talles Magno">
+                </div>
+
+                <div class="card-info">
+                    <h3>Talles Magno</h3>
+                    <p>Atacante #43</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/yuri.png" alt="Yuri Alberto">
+                </div>
+
+                <div class="card-info">
+                    <h3>Yuri Alberto</h3>
+                    <p>Atacante #9</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/memphis.png" alt="Memphis">
+                </div>
+
+                <div class="card-info">
+                    <h3>Memphis</h3>
+                    <p>Atacante #10</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/vitinho.png" alt="Vitinho">
+                </div>
+
+                <div class="card-info">
+                    <h3>Vitinho</h3>
+                    <p>Atacante #92</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                     <img src="assets/imagens/romero.png" alt="Romero">
+                </div>
+
+                <div class="card-info">
+                    <h3>Romero</h3>
+                    <p>Atacante #11</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/kayke.png" alt="Kayke">
+                </div>
+
+                <div class="card-info">
+                    <h3>Kayke</h3>
+                    <p>Atacante #31</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/imagens/hector.png" alt="'Héctor Hernandez">
+                </div>
+
+                <div class="card-info">
+                    <h3>Héctor Hernandez</h3>
+                    <p>Atacante #22</p>
+
+                    <button class="btn-avaliar">AVALIAR</button>
+            </div>
         </div>
     </section>
 </body>
