Adicionando logo no header

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Poderoso Timão</title>
+    <title>Jogadores</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
         <nav class="nav-container">
             <ul class="menu">
-                <li><a href="#home">Home</a></li>
+                <li class="menu-logo"> <a href="#home">
+                    <img src="assets/imagens/logo-site.png" alt="">
+                </a></li>
                 <li><a href="#historia">História</a></li>
                 <li><a href="#jogadores">Jogadores</a></li>
                 <li><a href="#fiel">Fiel Torcida</a></li>
