Adicionando dropdown e o footer

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,18 @@
                 <li><a href="#jogos">Jogos</a></li>
             </ul>
 
-            <button class="btn-user">Usuário</button>
+            <div class="user-dropdown">
+                <button class="btn-user"> 
+                    <img src="assets/imagens/user-icon.png" alt="Ícone de usuário">
+                    <span>Usuário</span>
+                </button>
+
+                <div class="dropdown-menu">
+                    <a href="#">Meu perfil</a>
+                    <a href="#">Minhas avaliações</a>
+                    <a href="#">Sair</a>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -317,5 +328,9 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+          <p>&copy; 2025 Corinthians Fan • Desenvolvido por Matheus & Kitty</p>
+    </footer>
 </body>
 </html>
