Finalizando parte dos jogadores e adicionando pagina de jogos

--- a/public/jogadores.html
+++ b/public/jogadores.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogadores</title>
+    <title>JOGADORES | TIMÃO</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/jogadores.css">
 </head>
 <body>
     <header>
@@ -14,9 +15,9 @@
                     <img src="assets/imagens/logo-site.png" alt="">
                 </a></li>
                 <li><a href="#historia">História</a></li>
-                <li><a href="#jogadores">Jogadores</a></li>
+                <li><a href="jogadores.html">Jogadores</a></li>
                 <li><a href="#fiel">Fiel Torcida</a></li>
-                <li><a href="#jogos">Jogos</a></li>
+                <li><a href="jogos.html#jogos">Jogos</a></li>
             </ul>
 
             <div class="user-dropdown">
@@ -40,7 +41,7 @@
         </div>
     </section>
 
-    <section class="card-jogador">
+    <section class="card-section">
         <div class="cards-container">
             <div class="card">
                 <div class="card-img">
